Improve university matcher

--- a/.env.example
+++ b/.env.example
@@ -15,3 +15,4 @@ TOGETHER_API_KEY=<your-together-api-key>
 GEMINI_API_KEY=<your-gemini-api-key>
 PINECONE_API_KEY=<your-pinecone-api-key>
 PINECONE_ENVIRONMENT=<your-pinecone-environment>
+EDUCANADA_URL=<optional-program-json-url>
